PostGIS 3.6.0dev
xxxx/xx/xxx

This version requires PostgreSQL 12-18beta1, GEOS 3.8 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL features, SFCGAL 2.1+ is needed.

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)
  - #5829, remove constraint checking from geometry_columns view (Paul Ramsey)

* Deprecated signatures *


* New Features *

  - GH-803, [sfcgal] ADD CG_Simplify function (Loïc Bartoletti)
  - GH-805, [sfcgal] Add M support for SFCGAL >= 1.5.0 (Loïc Bartoletti)
  - GH-801, [sfcgal] ADD CG_3DAlphaWrapping function (Jean Felder)
  - #5894, [topology] TotalTopologySize (Sandro Santilli)
  - #5890, [topology] ValidateTopologyPrecision, MakeTopologyPrecise (Sandro Santilli)
  - #5861, [topology] Add --drop-topology switch to pgtopo_import (Sandro Santilli)
  - #1247, [raster] ST_AsRasterAgg (Sandro Santilli)
  - #5784, GT-223 Export circ_tree_distance_tree_internal for mobilitydb use
           (Maxime Schoemans)
  - GT-228 [sfcgal] Add new functions (Scale, Translate, Rotate, Buffer 3D and
           Straight Skeleton Partition) from SFCGAL 2 (Loïc Bartoletti)
  - [raster] New GUC postgis.gdal_cpl_debug, enables GDAL debugging messages
    and routes them into the PostgreSQL logging system. (Paul Ramsey)
  - #5841, Change interrupt handling to remove use of pqsignal to support PG 18 (Paul Ramsey)
  - Add ST_CoverageClean to edge match and gap remove polygonal 
    coverages (Paul Ramsey) from GEOS 3.14 (Martin Davis)