@@ -246,6 +246,7 @@
 					<member>Christoph Berg</member>
 					<member>Christoph Moench-Tegeder</member>
 					<member>Dane Springmeyer</member>
+					<member>Daniel Nylander</member>
 					<member>Dapeng Wang</member>
 					<member>Daryl Herzmann</member>
 					<member>Dave Fuhry</member>
